// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SalaryByJobTitleChart > snapshot > matches error snapshot 1`] = `
<DocumentFragment>
  <section
    class="_section_e78324"
  >
    <div
      class="_sectionHeader_e78324"
    >
      <p
        class="_sectionTitle_e78324"
      >
        Avg. Salary by Job Title
      </p>
    </div>
    <p
      class="_error_e78324"
    >
      Failed to load chart data.
    </p>
  </section>
</DocumentFragment>
`;

exports[`SalaryByJobTitleChart > snapshot > matches loaded snapshot 1`] = `
<DocumentFragment>
  <section
    class="_section_e78324"
  >
    <div
      class="_sectionHeader_e78324"
    >
      <p
        class="_sectionTitle_e78324"
      >
        Avg. Salary by Job Title
      </p>
      <span
        class="_sectionCount_e78324"
      >
        3 job titles
      </span>
    </div>
    <div
      class="_chartWrapper_e78324"
    >
      <div
        data-testid="responsive-container"
      >
        <div
          data-length="3"
          data-testid="bar-chart"
        >
          <div
            data-testid="bar"
          />
        </div>
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`SalaryByJobTitleChart > snapshot > matches loading snapshot 1`] = `
<DocumentFragment>
  <section
    class="_section_e78324"
  >
    <div
      class="_sectionHeader_e78324"
    >
      <p
        class="_sectionTitle_e78324"
      >
        Avg. Salary by Job Title
      </p>
    </div>
    <p
      class="_loading_e78324"
    >
      Loading chart…
    </p>
  </section>
</DocumentFragment>
`;
